// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageHeader > renders complete layout with all elements 1`] = `
<div>
  <header
    class="w-full"
    role="banner"
  >
    <div
      class="mb-4 px-4 sm:px-6"
      data-versaur-page-header-breadcrumbs="true"
    >
      <nav
        aria-label="Breadcrumb"
      >
        <ol
          class="flex items-center gap-2 text-sm text-gray-500"
        >
          <li
            class="flex items-center"
          >
            <a
              class="inline-flex items-center gap-1 transition-colors hover:underline cursor-pointer"
              href="/"
              tabindex="0"
            >
              Home
            </a>
          </li>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right inline-flex items-center justify-center w-3 h-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
          <li
            class="flex items-center"
          >
            <a
              class="inline-flex items-center gap-1 transition-colors hover:underline cursor-pointer"
              href="/admin"
              tabindex="0"
            >
              Admin
            </a>
          </li>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right inline-flex items-center justify-center w-3 h-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
          <li
            class="flex items-center"
          >
            <a
              class="inline-flex items-center gap-1 transition-colors hover:underline cursor-pointer"
              tabindex="0"
            >
              Users
            </a>
          </li>
        </ol>
      </nav>
    </div>
    <div
      class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-4 px-4 sm:px-6 mb-4"
      data-versaur-page-header-top="true"
    >
      <div
        class="flex-1 min-w-0 flex flex-col gap-2 w-full sm:w-auto"
        data-versaur-page-header-content="true"
      >
        <h1
          class="text-ghost text-left truncate text-xl font-semibold"
        >
          User Management
        </h1>
        <p
          class="text-ghost text-left line-clamp-2 text-sm font-normal mb-2 sm:clamp-3"
        >
          Manage user accounts and permissions across the organization
        </p>
        <div
          class="flex items-center gap-2 flex-wrap"
          data-versaur-page-header-badges="true"
        >
          <span
            class="inline-flex items-center justify-center font-medium transition-all duration-200 select-none gap-1 min-h-[1.25rem] rounded-md text-xs px-1.5 py-0.5 h-4 bg-primary-light text-primary"
          >
            Active
          </span>
          <span
            class="inline-flex items-center justify-center font-medium transition-all duration-200 select-none gap-1 min-h-[1.25rem] rounded-md text-xs px-1.5 py-0.5 h-4 bg-neutral text-foreground"
          >
            Admin
          </span>
        </div>
      </div>
      <div
        class="flex flex-col sm:flex-row gap-2 sm:gap-3 w-full sm:w-auto sm:ml-auto sm:shrink-0 [&>*]:w-full sm:[&>*]:w-auto"
        data-versaur-page-header-actions="true"
      >
        <div
          class="flex flex-row justify-start gap-3"
          role="group"
        >
          <button
            aria-disabled="false"
            class="inline-flex items-center justify-center gap-2 rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-white text-foreground hover:bg-ghost-soft focus-visible:ring-ghost-light focus-visible:ring-offset-white h-9 px-4 text-sm min-w-[2.5rem]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-upload inline-flex items-center justify-center w-5 h-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 3v12"
              />
              <path
                d="m17 8-5-5-5 5"
              />
              <path
                d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
              />
            </svg>
            Import
          </button>
          <button
            aria-disabled="false"
            class="inline-flex items-center justify-center gap-2 rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-secondary text-white hover:bg-secondary/90 focus-visible:ring-secondary-light focus-visible:ring-offset-white shadow-sm hover:shadow-md h-9 px-4 text-sm min-w-[2.5rem]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-arrow-down inline-flex items-center justify-center w-5 h-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 5v14"
              />
              <path
                d="m19 12-7 7-7-7"
              />
            </svg>
            Export
          </button>
          <button
            aria-disabled="false"
            class="inline-flex items-center justify-center gap-2 rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-primary text-white hover:bg-primary/90 focus-visible:ring-primary-light focus-visible:ring-offset-white shadow-sm hover:shadow-md h-9 px-4 text-sm min-w-[2.5rem]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus inline-flex items-center justify-center w-5 h-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
            Add User
          </button>
        </div>
      </div>
    </div>
    <div
      class="w-full flex items-center px-4 sm:px-6 py-0 overflow-x-auto"
      data-versaur-page-header-bottom="true"
    >
      <div
        class="flex flex-row w-full overflow-x-auto whitespace-nowrap border-b border-border"
        role="tablist"
        style="position: relative;"
      >
        <button
          aria-controls="tabs-content-all"
          aria-selected="true"
          class="inline-flex items-center justify-center transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none select-none px-4 py-2 text-sm relative font-medium bg-transparent border-b-2 text-primary border-primary"
          id="tabs-trigger-all"
          role="tab"
          tabindex="0"
          type="button"
        >
          All Users
        </button>
        <button
          aria-controls="tabs-content-active"
          aria-selected="false"
          class="inline-flex items-center justify-center transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none select-none px-4 py-2 text-sm relative font-normal bg-transparent border-b-2 border-transparent text-foreground hover:text-primary"
          id="tabs-trigger-active"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Active
        </button>
        <button
          aria-controls="tabs-content-pending"
          aria-selected="false"
          class="inline-flex items-center justify-center transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none select-none px-4 py-2 text-sm relative font-normal bg-transparent border-b-2 border-transparent text-foreground hover:text-primary"
          id="tabs-trigger-pending"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Pending
        </button>
        <button
          aria-controls="tabs-content-disabled"
          aria-selected="false"
          class="inline-flex items-center justify-center transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none select-none px-4 py-2 text-sm relative font-normal bg-transparent border-b-2 border-transparent text-foreground hover:text-primary"
          id="tabs-trigger-disabled"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Disabled
        </button>
        <div
          aria-hidden="true"
          class="absolute bottom-0 h-0.5 rounded transition-all duration-300 bg-primary"
          style="left: 0px; width: 0px; pointer-events: none;"
        />
      </div>
    </div>
  </header>
</div>
`;

exports[`PageHeader > renders correctly with simple props 1`] = `
<div>
  <header
    class="w-full"
    role="banner"
  >
    <div
      class="mb-4 px-4 sm:px-6"
      data-versaur-page-header-breadcrumbs="true"
    >
      <nav
        aria-label="Breadcrumb"
      >
        <ol
          class="flex items-center gap-2 text-sm text-gray-500"
        >
          <li
            class="flex items-center"
          >
            <a
              class="inline-flex items-center gap-1 transition-colors hover:underline cursor-pointer"
              href="/"
              tabindex="0"
            >
              <span
                class="mr-1 inline-flex"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-house inline-flex items-center justify-center w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
                  />
                  <path
                    d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
                  />
                </svg>
              </span>
              Home
            </a>
          </li>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right inline-flex items-center justify-center w-3 h-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
          <li
            class="flex items-center"
          >
            <a
              class="inline-flex items-center gap-1 transition-colors hover:underline cursor-pointer"
              href="/admin"
              tabindex="0"
            >
              Admin
            </a>
          </li>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right inline-flex items-center justify-center w-3 h-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
          <li
            class="flex items-center"
          >
            <a
              class="inline-flex items-center gap-1 transition-colors hover:underline cursor-pointer"
              tabindex="0"
            >
              Users
            </a>
          </li>
        </ol>
      </nav>
    </div>
    <div
      class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-4 px-4 sm:px-6 mb-4"
      data-versaur-page-header-top="true"
    >
      <div
        class="flex-1 min-w-0 flex flex-col gap-2 w-full sm:w-auto"
        data-versaur-page-header-content="true"
      >
        <h1
          class="text-ghost text-left truncate text-xl font-semibold"
        >
          Dashboard
        </h1>
        <p
          class="text-ghost text-left line-clamp-2 text-sm font-normal mb-2 sm:clamp-3"
        >
          Welcome back, John
        </p>
      </div>
      <div
        class="flex flex-col sm:flex-row gap-2 sm:gap-3 w-full sm:w-auto sm:ml-auto sm:shrink-0 [&>*]:w-full sm:[&>*]:w-auto"
        data-versaur-page-header-actions="true"
      >
        <div
          class="flex flex-row justify-start gap-3"
          role="group"
        >
          <button
            aria-disabled="false"
            class="inline-flex items-center justify-center gap-2 rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-primary text-white hover:bg-primary/90 focus-visible:ring-primary-light focus-visible:ring-offset-white shadow-sm hover:shadow-md h-9 px-4 text-sm min-w-[2.5rem]"
            type="button"
          >
            New Project
          </button>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`PageHeader > renders minimal layout 1`] = `
<div>
  <header
    class="w-full"
    role="banner"
  >
    <div
      class="mb-4 px-4 sm:px-6"
      data-versaur-page-header-breadcrumbs="true"
    >
      <nav
        aria-label="Breadcrumb"
      >
        <ol
          class="flex items-center gap-2 text-sm text-gray-500"
        >
          <li
            class="flex items-center"
          >
            <a
              class="inline-flex items-center gap-1 transition-colors hover:underline cursor-pointer"
              href="/"
              tabindex="0"
            >
              <span
                class="mr-1 inline-flex"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-house inline-flex items-center justify-center w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
                  />
                  <path
                    d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
                  />
                </svg>
              </span>
              Home
            </a>
          </li>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right inline-flex items-center justify-center w-3 h-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
          <li
            class="flex items-center"
          >
            <a
              class="inline-flex items-center gap-1 transition-colors hover:underline cursor-pointer"
              href="/admin"
              tabindex="0"
            >
              Admin
            </a>
          </li>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right inline-flex items-center justify-center w-3 h-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
          <li
            class="flex items-center"
          >
            <a
              class="inline-flex items-center gap-1 transition-colors hover:underline cursor-pointer"
              tabindex="0"
            >
              Users
            </a>
          </li>
        </ol>
      </nav>
    </div>
    <div
      class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-4 px-4 sm:px-6 mb-4"
      data-versaur-page-header-top="true"
    >
      <div
        class="flex-1 min-w-0 flex flex-col gap-2 w-full sm:w-auto"
        data-versaur-page-header-content="true"
      >
        <h1
          class="text-ghost text-left truncate text-xl font-semibold"
        >
          Simple Page
        </h1>
      </div>
    </div>
  </header>
</div>
`;
